src/main.css
/* 3D image */
.cool3D {
  width: auto;
  height: 800px;
  display: block;
  margin-left: auto;
  margin-top: 65px;
}

@media (max-width: 600px) {
  .cool3D {
    width: auto;
    height: 730px;
    display: block;
    margin-left: auto;
    margin-top: 65px;
  }
}

.fenwayPicture {
  border-radius: 360px;
  min-width: 287px;
  width: 20%;
  max-width: 450px;
  padding: 5px;
  float: left;
  border: 2px solid white;
  -webkit-animation: colorchange 40s infinite;
}

/* Animations for color on boarder of picture */
@keyframes colorchange {
  0% {
    border: 1px solid red;
  }
  25% {
    border: 1px solid yellow;
  }
  50% {
    border: 1px solid blue;
  }
  75% {
    border: 1px solid green;
  }
  100% {
    border: 1px solid red;
  }
}
@-webkit-keyframes colorchange /* Safari and Chrome - necessary duplicate */ {
  0% {
    border: 1px solid red;
  }
  25% {
    border: 1px solid yellow;
  }
  50% {
    border: 1px solid blue;
  }
  75% {
    border: 1px solid green;
  }
  100% {
    border: 1px solid red;
  }
}

.aboutFont {
  font-size: 13px;
  line-height: 2em;
  /* text-transform: uppercase; */
  color: #333;
  font-family: "Raleway", cursive;
  background-color: #fff;
}

.centerAbout {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 80%;
}

.centerPDF {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 80%;
}

.aboutSection {
  display: -webkit-box;
  padding-bottom: 5px;
  background-color: #fff;
}

.header {
  color: #fff;
  text-align: center;
  background: navy;
  padding: 5px;
  cursor: default;
  vertical-align: middle;
  font-family: "Permanent Marker", cursive;
  letter-spacing: 0.3rem;
  text-transform: uppercase;
}

/* Projects section with media tags */
.projectSection {
  display: table;
  table-layout: fixed;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  padding-bottom: 5px;
}

.cards {
  max-width: 345px;
  margin: 20px;
  display: table-cell;
  padding: 10px;
  min-width: 326px;
}
@media (max-width: 480px) {
  .cards,
  .projectSection {
    display: contents !important;
  }
}

@media (max-width: 1300px) {
  .cards,
  .projectSection {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 100%;
  }
}

@media (max-width: 1320px) {
  .projectSection,
  .cards {
    display: block;
  }
}

@media (min-width: 1850px) {
  .projectSection,
  .cards {
    width: 100%;
  }
}

@media (min-width: 2200px) {
  .projectSection,
  .cards {
    width: 100%;
  }
}
/* End of projects */

.certificationSection {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 80%;
  padding-bottom: 5px;
  position: static;
}

.cert {
  margin: 20px;
  padding: 10px;
  max-width: 100% !important;
}

.resume {
  max-width: 100% !important;
  margin: 20px;
  padding: 10px;
}

.cert > div {
  position: static !important;
}

.resume > div {
  position: static !important;
}

.cert > div > canvas {
  display: flex !important;
  width: 35vw !important;
  position: inherit;
  height: unset !important;
  margin-left: auto;
  margin-right: auto;
  border-radius: 25px;
  box-shadow: 0 30px 40px 0 rgba(16, 36, 94, 0.2);
}
.resume > div > canvas {
  display: flex !important;
  width: 31vw !important;
  position: inherit;
  height: unset !important;
  margin-left: auto;
  margin-right: auto;
  border-radius: 25px;
  box-shadow: 0 30px 40px 0 rgba(16, 36, 94, 0.2);
}

.icon {
  height: 5vw;
  padding-left: 33%;
  padding-right: 33%;
}

@media (max-width: 767px) {
  .text {
    font-size: 10px;
  }

  .icon {
    height: 6vw;
    padding: 10px;
  }
}

.react-pdf__Page__textContent {
  position: fixed !important;
}

@media (max-width: 650px) {
  .cert > div > canvas {
    display: flex !important;
    width: 60vw !important;
    position: inherit;
    height: auto !important;
    margin-left: auto;
    margin-right: auto;
    border-radius: 10px;
    box-shadow: 0 30px 40px 0 rgba(16, 36, 94, 0.2);
  }
  .resume > div > canvas {
    display: flex !important;
    height: auto !important;
    position: inherit;
    width: 61vw !important;
    margin-left: auto;
    margin-right: auto;
    border-radius: 10px;
    box-shadow: 0 30px 40px 0 rgba(16, 36, 94, 0.2);
  }

  .centerPDF {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 100%;
  }
}

@media (min-width: 651px) and (max-width: 1024px) {
  .cert > div > canvas {
    display: flex !important;
    width: 55vw !important;
    position: inherit;
    height: auto !important;
    margin-left: auto;
    margin-right: auto;
    border-radius: 10px;
    box-shadow: 0 30px 40px 0 rgba(16, 36, 94, 0.2);
  }
  .resume > div > canvas {
    display: flex !important;
    height: 66vh !important;
    position: inherit;
    width: unset !important;
    margin-left: auto;
    margin-right: auto;
    border-radius: 10px;
    box-shadow: 0 30px 40px 0 rgba(16, 36, 94, 0.2);
  }

  .centerPDF {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 100%;
  }
}

.downloadLink {
  text-decoration: none !important;
}

.text {
  color: #fff;
  margin-left: auto;
  visibility: hidden;
  text-align: center;
  margin-right: auto;
}

.cell:hover .text {
  visibility: visible;
}

/* Code added to help the rendering of the PDF files */
.react-pdf__Page__textContent {
  display: none;
}

.text-title {
  font-family: "Caveat", cursive;
  letter-spacing: 0.3rem;
  text-transform: uppercase;
}

.container {
  background: linear-gradient(100deg, #bdc3c7 50%, #2c3e50 0);
}

